--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -1,13 +1,22 @@
 {
   "name": "@easykey/desktop",
   "version": "1.0.0",
+  "description": "Secure password generator for desktop platforms",
+  "author": {
+    "name": "EasyKey Team",
+    "email": "contact@easykey.example.com"
+  },
+  "license": "MIT",
   "main": "public/electron.js",
   "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "electron:start": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
-    "electron:build": "yarn build && electron-builder"
+    "electron:start": "cross-env NODE_ENV=development concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron:build": "cross-env NODE_ENV=production yarn build && electron-builder",
+    "electron:package": "electron-builder --dir",
+    "electron:make": "electron-builder --mac --win --linux",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@easykey/shared": "1.0.0",
@@ -17,8 +26,10 @@
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
-    "electron": "^21.3.0",
+    "cross-env": "^7.0.3",
+    "electron": "21.3.0",
     "electron-builder": "^23.6.0",
+    "node": "^23.11.0",
     "wait-on": "^7.0.1"
   },
   "browserslist": {
@@ -32,5 +43,44 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "build": {
+    "appId": "com.easykey.app",
+    "productName": "EasyKey",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*",
+      "public/electron.js"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist"
+    },
+    "extraMetadata": {
+      "main": "build/electron.js"
+    },
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": "dmg"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Utility",
+      "packageCategory": "utils",
+      "executableName": "easykey",
+      "artifactName": "${productName}-${version}.${ext}",
+      "synopsis": "Secure password generator",
+      "desktop": {
+        "Name": "EasyKey",
+        "GenericName": "Password Generator",
+        "Comment": "Generate secure passwords"
+      }
+    }
   }
 }
