--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@easykey/shared",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "src/index.js",
   "dependencies": {
     "react": "^17.0.2"
