--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -22,6 +22,7 @@
     "@easykey/shared": "1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
