--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,30 @@
-# Dependencies
-node_modules/
-.pnp/
+# dependencies
+/node_modules
+/.pnp
 .pnp.js
 
-# Testing
-coverage/
+# testing
+/coverage
 
-# Production
-build/
-dist/
-temp_asar_extract/
+# production
+/build
 
-# Development
+# misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Expo
-.expo/
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-
-# IDE
+# Editor directories and files
 .idea
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-
-# Electron
-.electron-builder/
-
-# Shell scripts
-*.sh
-
-# Misc
-.env
-.env.production
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 *.sw?
