--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-  "name": "easykey-workspace",
-  "version": "1.0.0",
+  "name": "easykey",
+  "version": "0.1.0",
   "private": true,
-  "license": "MIT",
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "start:mobile": "yarn workspace @easykey/mobile start",
-    "start:desktop": "yarn workspace easykey-desktop electron:start",
-    "build:desktop": "yarn workspace easykey-desktop electron:build",
-    "package:desktop": "yarn workspace easykey-desktop electron:package",
-    "make:desktop": "yarn workspace easykey-desktop electron:make",
-    "fix:electron": "chmod +x ./rebuild-electron.sh && ./rebuild-electron.sh",
-    "prepare:desktop": "node packages/desktop/copy-electron.js",
-    "clean-rebuild": "chmod +x ./fix-build.sh && ./fix-build.sh",
-    "install-ui": "chmod +x ./install-ui-deps.sh && ./install-ui-deps.sh",
-    "start-ui": "cd packages/desktop && yarn electron:start"
+  "dependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "concurrently": "^7.6.0",
-    "cross-env": "^7.0.3"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
