--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,19 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Docker related
+docker-compose.override.yml
+.docker-data/
+.env
+docker.md
+.dockerignore
+docker-compose.yml
+Dockerfile
+nginx.conf
+
+# Configuration files with sensitive data
+/config
+*.config.local.js
+*.config.local.json
+
